<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@drawable/backgroundresaize"
    tools:context=".NewAccontActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nova_conta"
            android:textColor="@color/colorTextLight"
            android:textSize="60dp"
            android:layout_gravity="center"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etNome"
                android:layout_width="275dp"
                android:layout_height="76dp"
                android:hint="@string/Nome"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etCPF"
                android:layout_width="275dp"
                android:layout_height="61dp"
                android:hint="CPF"
                android:inputType="number"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etCEP"
                android:layout_width="275dp"
                android:layout_height="76dp"
                android:hint="CEP"
                android:inputType="number"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etEndereco"
                android:layout_width="275dp"
                android:layout_height="75dp"
                android:hint="@string/Endereco_numenro"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etUsuario"
                android:layout_width="275dp"
                android:layout_height="76dp"
                android:hint="@string/Usuario"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etEmail"
                android:layout_width="275dp"
                android:layout_height="61dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etSenha"
                android:layout_width="275dp"
                android:layout_height="76dp"
                android:hint="@string/Senha"
                android:inputType="textPassword"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"

                />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/etConfirmacaoSenha"
                android:layout_width="275dp"
                android:layout_height="75dp"
                android:hint="@string/Confirmar_senha"
                android:inputType="textPassword"
                android:textColor="@color/colorTextLight"
                android:textColorHint="@color/colorTextLight"
                />

            <Spinner
                android:layout_gravity="center"
                android:layout_width="275dp"
                android:layout_height="75dp"
                android:id="@+id/spSexo"
                android:textColor="@color/colorTextLight"
                android:entries="@array/opcsexo"></Spinner>

            <CheckBox
                android:layout_gravity="center"
                android:id="@+id/checkBox"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:text="@string/Aceito_os_termos_de_uso"
                android:textColor="@color/colorTextLight"

                />

            <TextView
                android:id="@+id/tvErro"
                android:layout_gravity="center"
                android:layout_width="276dp"
                android:layout_height="22dp"
                android:layout_marginBottom="16dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmacaoSenha"
                android:textColorHint="@color/colorTextDark"/>

            <Button
                android:layout_gravity="center"
                android:id="@+id/btE"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:onClick="validarCampos"
                android:text="@string/Concluir"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>